--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,11 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: 'QWRT-25.10.30'
+        description: '版本'
         required: false
         default: ''
       text:
-        description: '嘻嘻'
+        description: '要写'
         required: false
         default: ''
 concurrency:
@@ -54,7 +54,7 @@ jobs:
           - x86_64
           
         sdk:
-          - 24.10.2
+          - 24.10.3
           #- SNAPSHOT
 
     steps:
